--- a/sourse/pug/blocks/s-accord/_s-accord.pug
+++ b/sourse/pug/blocks/s-accord/_s-accord.pug
@@ -43,8 +43,8 @@ mixin s-accord()
 						+e.title-foot Остались вопросы?
 						+e.gray Задайте их&nbsp;начальнику ПТО, он&nbsp;с&nbsp;радостью на&nbsp;них ответит
 
-					.col-xl.col-auto 
-						.row
+					.col-xl.col-sm-auto 
+						.row.row--sm
 							.col-auto
 								+e.person: img.lazy(src="#" data-src='img/man-circle.png', alt='')
 								
