--- a/sourse/pug/blocks/s-team/_s-team.scss
+++ b/sourse/pug/blocks/s-team/_s-team.scss
@@ -1,4 +1,5 @@
 .s-team {
+	
 	&.visible {}
 
 	.section-title {
@@ -8,7 +9,10 @@
 			padding-bottom: 42px;
 		}
 		&__text{
-			padding-top: 1.4rem;
+			@include media-breakpoint-up(sm) {
+
+				padding-top: 1.4rem;
+			}
 			max-width: 600px;
 			margin-left: auto;
 			margin-right: auto;
@@ -127,11 +131,17 @@
 		margin-right: auto;
 		max-width: 464px;
 		padding: 10px 10px 20px;
+		@include media-breakpoint-up(md){
 		margin-bottom: 40px;
+	}
+	margin-bottom: 25px;
 	}
 	&__caption{
 		color: #1a1a1a; 
-		font-size: 22px;
+		@include media-breakpoint-up(md){
+
+			font-size: 22px;
+		}
 		max-width: 610px;
 		margin-left: auto;
 		margin-right: auto;
@@ -147,6 +157,9 @@
 		margin-left: auto;
 		margin-right: auto;
 		padding: rem(14) rem(10);
+		@include media-breakpoint-down(xs){
+				font-size: 16px;
+		}
 		div{
 				font-weight: normal;
 		}
@@ -202,7 +215,11 @@
 
 	@include media-breakpoint-down(md) {}
 
-	@include media-breakpoint-down(sm) {}
+	@include media-breakpoint-down(sm) {
+		.section-title {
+			padding-bottom: 1em;
+	}
+	}
 
 	@include media-breakpoint-down(xs) {}
 
