--- a/sourse/libs/Easy-Responsive-Tab-Accordion-Control-Plugin-For-jQuery/easy-responsive-tabs.css
+++ b/sourse/libs/Easy-Responsive-Tab-Accordion-Control-Plugin-For-jQuery/easy-responsive-tabs.css
@@ -159,11 +159,11 @@ p {
 
 
 /*Here your can change the breakpoint to set the accordion, when screen resolution changed*/
-@media only screen and (max-width: 768px) {
+@media only screen and (max-width: 767.91px) {
 
 ul.resp-tabs-list { display: none; }
 
-.h4.resp-accordion { display: block; }
+.h4.resp-accordion { 	display: flex; }
 
 .resp-vtabs .resp-tab-content { 
 
