--- a/sourse/pug/blocks/footer/_footer.pug
+++ b/sourse/pug/blocks/footer/_footer.pug
@@ -4,7 +4,7 @@ mixin footer()
 			.row
 				.col-lg
 					+e.logo()
-						img.res-i.lazy(src="#" data-src="img/logo.png", alt="")
+						a(href="/"): img.res-i.lazy(src="#" data-src="img/logo.png", alt="")
 					+e.text--head Проектируем и&nbsp;строим дома  с&nbsp;2001 года
 					+e.text &copy;&nbsp;Копирование и&nbsp;распространение  материалов с&nbsp;сайта, без письменного  согласия правообладателя запрещено.
 				+e.col.col-auto
