--- a/sourse/pug/blocks/footer/_footer.scss
+++ b/sourse/pug/blocks/footer/_footer.scss
@@ -22,9 +22,10 @@
       &--head{
         max-width: 200px;
       }
-      margin-bottom: 20px;
     }
-    margin-bottom: 10px;
+    margin-bottom: 30px;
+
+    // margin-bottom: 10px;
   }
   .menu{
     @include media-breakpoint-up(lg) {
@@ -51,6 +52,7 @@
 
       padding-top: 30px;
     }
+    
     padding-top: 10px;
   }
   &__soc-title{
@@ -66,6 +68,7 @@
     font-size: 15px;
     color: #535353;
     text-decoration: none !important;
+    margin-bottom: 45px;
     .icon{
       font-size: 27px;
       margin-right: 10px;
