--- a/sourse/pug/blocks/header-block/_header-block.scss
+++ b/sourse/pug/blocks/header-block/_header-block.scss
@@ -1,13 +1,14 @@
 .header-block {
+	
 	@include media-breakpoint-up(md) {
 
 		padding-top: 90px;
 		padding-bottom: 473px;
 		margin-bottom: -300px;
 	}
-	padding-top: 20px;
-	padding-bottom: 220px;
-	margin-bottom: -150px;
+	padding-top: 50px;
+	padding-bottom: 320px;
+	margin-bottom: -200px;
 	&__block{
 		
 		 max-width: 650px;
@@ -21,6 +22,7 @@
 
 			padding-bottom: rem(35);
 		}
+		padding-bottom: rem(25);
 	}
 	&__img-wrap{
 		@extend .col-auto;
@@ -51,7 +53,14 @@
 		flex-wrap: nowrap;
 	}
 	&__img-wrap{
-		width: 116px;
+		width: 120px;
+		@include media-breakpoint-up(md) {
+
+			padding-right: 10px;
+			text-align: right;
+		}
+		padding-right: 5px;
+		text-align: center;
 	}
 	&__btn{
 		@extend .btn;
@@ -100,5 +109,9 @@
 
 	@include media-breakpoint-down(sm) {}
 
-	@include media-breakpoint-down(xs) {}
+	@include media-breakpoint-down(xs) {
+		&__btn{
+			font-size: 16px;
+		}
+	}
 }
