--- a/sourse/pug/blocks/s-projects/_s-projects.scss
+++ b/sourse/pug/blocks/s-projects/_s-projects.scss
@@ -1,7 +1,6 @@
 .s-projects {
-		&.visible{
-		
-		}
+	position: relative;
+		 
 		.section-title{
 			@include media-breakpoint-up(xl) {
 
@@ -12,6 +11,9 @@
 				max-width: 600px;
 				margin-left: auto;
 				margin-right: auto;
+				@include media-breakpoint-up(sm) {
+					padding-top: 20px;
+				}
 			}
 		}
 		&__item{
@@ -28,9 +30,23 @@
 			@include block(382, 285);
 			@include mt;
 			background-size: 100%;
+			&::before{
+				content: '';
+				position: absolute;
+				left: 0;
+				top: 0;	
+				width: 100%;
+				height: 100%;
+				background-color: #000000;
+				opacity: 0;
+				@include mt;
+			}
 		}
 		&__item:hover &__img-wrap{
-			background-size: 120%;
+			// background-size: 120%;
+			&::before{
+				opacity: 0.4;
+			}
 		}
 		.row{
 			@include roww(5);
@@ -46,6 +62,31 @@
 
 		&__col{
 			margin-bottom: 30px;
+		}
+
+
+		.scene{
+			// .scene
+			position: absolute !important;
+			width: 100%;
+			height: 100%;
+			left: 0;
+			top: 0;
+			z-index: -1;
+		}
+		&__elem{
+			position: absolute;
+			&--1{
+				top: 56% !important;
+				left: -180px !important; 
+			}
+			
+			&--2{
+				right: -250px !important;
+				top: 14% !important;
+				left:  auto !important; 
+			}
+	
 		}
 	//
 	@include media-breakpoint-up(xl) {}
@@ -71,5 +112,9 @@
 	@include media-breakpoint-down(md) {}
 	@include media-breakpoint-down(sm) {}
 	@include media-breakpoint-down(xs) {} 
-
+	@include media-breakpoint-down(sm) {
+		.section-title {
+			padding-bottom: 1em;
+		}
+	}
 }
