--- a/sourse/pug/blocks/s-team/_s-team.pug
+++ b/sourse/pug/blocks/s-team/_s-team.pug
@@ -4,7 +4,7 @@ mixin s-team()
 		.container
 			+b.section-title.text-center
 				h2 В&nbsp;строительстве вашего дома участвует  целая команда специалистов
-				+e.text Опыт каждого нашего сотрудника в&nbsp;проектировании  более 2х&nbsp;лет, в&nbsp;строительстве более 5&nbsp;лет.
+				+e.text.text-secondary Опыт каждого нашего сотрудника в&nbsp;проектировании  более 2х&nbsp;лет, в&nbsp;строительстве более 5&nbsp;лет.
 				
 			.row
 				.col-lg-4
@@ -50,7 +50,7 @@ mixin s-team()
 												| 12 лет
 									+e.caption &laquo;В&nbsp;нашей работе главное внимание к&nbsp;деталям, ведь из&nbsp;деталей складывается общее понимание задачи. объемов, материальных и&nbsp;физических обоснований&raquo;
 									//- block
-									+e.btn.btn-js(href='#') Задать вопрос
+									+e.btn.btn-js.popup-with-move-anim(href='#modal-call3') Задать вопрос
 										div Андрею Владимировичу
 										
 
