--- a/sourse/pug/blocks/s-why/_s-why.pug
+++ b/sourse/pug/blocks/s-why/_s-why.pug
@@ -1,6 +1,12 @@
 mixin s-why()
 	// start s-why
 	+b.s-why.section#s-why.lazy-background&attributes(attributes)
+		.scene-wrap.d-none.d-xl-block
+			.scene(id="scene") 
+				+e.elem--1.--js(data-depth="0.1")
+					img(src="img/why-left-1.png", alt="")
+				+e.elem--2.--js(data-depth="0.2")
+					img(src="img/why-right.png", alt="")
 		.container
 			+b.section-title.text-center
 				h2 Почему 8&nbsp;из&nbsp;10&nbsp;клиентов 
@@ -12,7 +18,7 @@ mixin s-why()
 					.col-md-4.col-sm-6
 						+e.item
 							+e.img-wrap
-								img.res-i.lazy(src="#" data-src=`img/why-${i}.png`, alt="")
+								img.res-i(src=`img/why-${i}.png`, alt="")
 							+e.title= t
 							block
 					// /.col-md-4.col-sm-6
