--- a/sourse/pug/blocks/top-line/_top-line.scss
+++ b/sourse/pug/blocks/top-line/_top-line.scss
@@ -28,6 +28,9 @@
     @extend .btn;
     @extend .btn-primary;
     @extend .btn-sm;
+    &::after{
+      display: none !important;
+    }
     @include media-breakpoint-up(xl) {
 
       width: 165px;
@@ -40,11 +43,17 @@
     font-weight: bold;
     display: inline-block;
     margin-bottom: 5px;
-    
+    &::after{
+      display: none !important;
+    }
     @extend .btn;
     @extend .btn-primary;
     @extend .btn-sm;
     @include media-breakpoint-up(sm) {
+      
+      &::before{
+        display: none;
+      }
       font-size: 19px;
       padding: 0 !important;
       background: none !important;
@@ -113,27 +122,30 @@
   &__text{
     display: none;
   }
-
-  &__tel{
-    // background-color: #b7b7b7;
-    // border-color: #ffdb72;
-    // background-image: -webkit-gradient(linear,left bottom,left top,from(#f9c457),color-stop(5%,#f6b73e),color-stop(99%,#ffdb72),to(#ffdb72));
-    // background-image: -webkit-linear-gradient(bottom,#f9c457 0,#f6b73e 5%,#ffdb72 99%,#ffdb72 100%);
-    // background-image: -o-linear-gradient(bottom,#f9c457 0,#f6b73e 5%,#ffdb72 99%,#ffdb72 100%);
-    // background-image: linear-gradient(to top,#f9c457 0,#f6b73e 5%,#ffdb72 99%,#ffdb72 100%);
-    // -webkit-box-shadow: 0 0.3125em 0 #a97734;
-    // box-shadow: 0 0.3125em 0 #a97734;
-    // width: 40px;
-    // text-align: center;
-    // padding: .5rem .5rem;
-    // font-size: .875rem;
-    // line-height: 1.5;
-    // -webkit-border-radius: .2rem;
-    // border-radius: .2rem;
-    // -webkit-box-shadow: 0 0.125em 0 #a97734;
-    // box-shadow: 0 0.125em 0 #a97734;
-    // font-weight: 500;
+  &__btn-text{
+    display: none;
   }
+
+  // &__tel{
+  //   // background-color: #b7b7b7;
+  //   // border-color: #ffdb72;
+  //   // background-image: -webkit-gradient(linear,left bottom,left top,from(#f9c457),color-stop(5%,#f6b73e),color-stop(99%,#ffdb72),to(#ffdb72));
+  //   // background-image: -webkit-linear-gradient(bottom,#f9c457 0,#f6b73e 5%,#ffdb72 99%,#ffdb72 100%);
+  //   // background-image: -o-linear-gradient(bottom,#f9c457 0,#f6b73e 5%,#ffdb72 99%,#ffdb72 100%);
+  //   // background-image: linear-gradient(to top,#f9c457 0,#f6b73e 5%,#ffdb72 99%,#ffdb72 100%);
+  //   // -webkit-box-shadow: 0 0.3125em 0 #a97734;
+  //   // box-shadow: 0 0.3125em 0 #a97734;
+  //   // width: 40px;
+  //   // text-align: center;
+  //   // padding: .5rem .5rem;
+  //   // font-size: .875rem;
+  //   // line-height: 1.5;
+  //   // -webkit-border-radius: .2rem;
+  //   // border-radius: .2rem;
+  //   // -webkit-box-shadow: 0 0.125em 0 #a97734;
+  //   // box-shadow: 0 0.125em 0 #a97734;
+  //   // font-weight: 500;
+  // }
   .row{
     @include roww(5);
     // @extend .roww(5);
