--- a/sourse/sass/bootstrap/_buttons.scss
+++ b/sourse/sass/bootstrap/_buttons.scss
@@ -27,8 +27,15 @@
 
   }
   .btn-js{
-    overflow: hidden;
-    position: relative;
+    .animate-wrap{
+      position: absolute;
+      left: 0;
+      top: 0;
+      width: 100%;
+      height: 100%;
+      border-right: 12px;
+      overflow: hidden; 
+    }
   }
 .btn {
   display: inline-block;
@@ -47,11 +54,14 @@
   @include hover-focus {
     text-decoration: none;
   }
+  @include media-breakpoint-down(xs) {
+    font-size: 16px;
+  }
   
   &:focus,
   &.focus {
     outline: 0;
-    box-shadow: $btn-focus-box-shadow;
+    // box-shadow: $btn-focus-box-shadow;
   }
   
   // Disabled comes first so active can properly restyle
@@ -69,10 +79,10 @@
   &:not(:disabled):not(.disabled):active,
   &:not(:disabled):not(.disabled).active {
     background-image: none;
-    @include box-shadow($btn-active-box-shadow);
+    // @include box-shadow($btn-active-box-shadow);
     
     &:focus {
-      @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
+      // @include box-shadow($btn-focus-box-shadow, $btn-active-box-shadow);
     }
   }
 }
@@ -103,11 +113,39 @@ fieldset:disabled a.btn {
     .btn-primary{
       background-color: #b7b7b7;
       border-color: #ffdb72;
-      background-image: linear-gradient(to top, #f9c457 0%, $primary 5%, #ffdb72 99%, #ffdb72 100%);
+      z-index: 2;
+      
+      // z-index: 2;
+      &::after{
+        content: ''; 
+        background-image: url(../img/btn_shadow.png);
+        @include a-cent(x);
+        bottom: rem(-29);
+        z-index: -2;
+        height: 35px;
+        background-size: 100% 100%;
+        width: 110%;
+
+      }
+      &::before{
+        content: '';
+        position: absolute;
+        z-index: -1;
+        left: 0;
+        top: 0; width: 100%;
+        height: 100%;
+        background-image: linear-gradient(to top, #f9c457 0%, $primary 5%, #ffdb72 99%, #ffdb72 100%);
+        opacity: 1;
+        @include mt;
+      }
       box-shadow: 0 em(5px) 0 #a97734;
+      background-image: linear-gradient(to top, #ffc554 0%, #ffc657 5%, #ffe391 99%, #ffe391 100%);
       &:hover{
         border-color: #ffe391;
-        background-image: linear-gradient(to top, #ffc554 0%, #ffc657 5%, #ffe391 99%, #ffe391 100%);
+        &::before{
+          // display: none;
+          opacity: 0;
+        }
       }
     }
     //
