--- a/sourse/sass/bootstrap/_type.scss
+++ b/sourse/sass/bootstrap/_type.scss
@@ -41,7 +41,11 @@ h2, .h2 {   @include media-breakpoint-up(lg) {
 }
 font-size: $h2-font-size *.6;}
 h3, .h3 { font-size: $h3-font-size; }
-h4, .h4 { font-size: $h4-font-size; }
+h4, .h4 {  @include media-breakpoint-up(md) {
+
+  font-size: $h4-font-size; 
+}
+font-size: $h4-font-size * .8;  }
 h5, .h5 { 
   @include media-breakpoint-up(md) {
 
