--- a/sourse/sass/bootstrap/_variables.scss
+++ b/sourse/sass/bootstrap/_variables.scss
@@ -404,11 +404,11 @@ $input-padding-y-lg:                    $input-btn-padding-y-lg !default;
 $input-padding-x-lg:                    $input-btn-padding-x-lg !default;
 $input-line-height-lg:                  $input-btn-line-height-lg !default;
 
-$input-bg:                              #f7f7f7 !default;
+$input-bg:                              #fff !default;
 $input-disabled-bg:                     $gray-200 !default;
 
 $input-color:                           $gray-700 !default;
-$input-border-color:                    #f7f7f7 !default;
+$input-border-color:                   #dbdbdb !default;
 $input-border-width:                    $input-btn-border-width !default;
 $input-box-shadow:                      inset 0 1px 1px rgba($black, .075) !default;
 
