--- a/sourse/sass/main.scss
+++ b/sourse/sass/main.scss
@@ -30,7 +30,7 @@ $output-bourbon-deprecation-warnings: false;
 @import "../pug/blocks/form-wrap/form-wrap";
 @import "../pug/blocks/header/_header";
 @import "../pug/blocks/top-line/top-line";
-@import "../pug/blocks/top-nav/top-nav";
+// @import "../pug/blocks/top-nav/top-nav";
 
 
 @import "../pug/blocks/header-block/_header-block";
